# Console-Command-Runner-SF

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: CMakeLists.txt  Hooks.h  PCH.h  Plugin.h
src/: CMakeLists.txt  Hooks.cpp  Main.cpp
